11/12 poster 과제 구현

--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>CSS Layout Masterclass</title>
+    <title>Poster</title>
   </head>
   <body>
+    <div class="poster">
+      <div class="title_box">
+        <span class="title">Paris</span>
+        <span class="number">06.</span>
+      </div>
+      <hr />
+      <div class="text_box">
+        <div class="text1">
+          <span>COUNTRY</span>
+          <span>FRANCE</span>
+          <span>POPULATION</span>
+          <span>2.249.976</span>
+          <span>LOCATION</span>
+        </div>
+       <div class="text1">
+         <span>COLOURS</span>
+         <span>WHITE</span>
+         <span>RED</span>
+         <span>GREEN</span>
+       </div>
+        <div class="text1">
+          <span>https://github.com/youngryul</span>
+        </div>
+      </div>
+      <div class="circle">
+        <div class="sky"></div>
+        <div class="sky"></div>
+        <div class="sky"></div>
+        <div class="grey"></div>
+        <div class="grey"></div>
+        <div class="grey"></div>
+        <div class="green"></div>
+        <div class="green"></div>
+        <div class="green"></div>
+      </div>
+    </div>
   </body>
 </html>
