Feat: [11/13]grid 실습 과제 구현 완료

--- a/index.html
+++ b/index.html
@@ -4,43 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Poster</title>
+    <title>CSS Challenge</title>
   </head>
   <body>
-    <div class="poster">
-      <div class="title_box">
-        <span class="title">Paris</span>
-        <span class="number">06.</span>
+    <div id="container">
+      <div>
+        <span>upcoming<br/>all ages hardcore</span>
+        <span>at the eagles lodge<br/>schenectady, new york</span>
+        <span>hope to see you there<br/>wednesday, june 27 1990</span>
       </div>
-      <hr />
-      <div class="text_box">
-        <div class="text1">
-          <span>COUNTRY</span>
-          <span>FRANCE</span>
-          <span>POPULATION</span>
-          <span>2.249.976</span>
-          <span>LOCATION</span>
-        </div>
-       <div class="text1">
-         <span>COLOURS</span>
-         <span>WHITE</span>
-         <span>RED</span>
-         <span>GREEN</span>
-       </div>
-        <div class="text1">
-          <span>https://github.com/youngryul</span>
-        </div>
+      <div>
+        <h1>bad</h1>
       </div>
-      <div class="circle">
-        <div class="sky"></div>
-        <div class="sky"></div>
-        <div class="sky"></div>
-        <div class="grey"></div>
-        <div class="grey"></div>
-        <div class="grey"></div>
-        <div class="green"></div>
-        <div class="green"></div>
-        <div class="green"></div>
+      <div></div>
+      <div>
+        <h1>religion</h1>
+        <h5>with<br/>jawbreaker & glee club</h5>
       </div>
     </div>
   </body>
