Feat: [11/14]grid 실습 과제2 구현 완료

--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
   </head>
   <body>
     <div id="container">
-      <div>
-        <span>upcoming<br/>all ages hardcore</span>
-        <span>at the eagles lodge<br/>schenectady, new york</span>
-        <span>hope to see you there<br/>wednesday, june 27 1990</span>
-      </div>
-      <div>
-        <h1>bad</h1>
-      </div>
-      <div></div>
-      <div>
-        <h1>religion</h1>
-        <h5>with<br/>jawbreaker & glee club</h5>
-      </div>
+      <div>Ostrich</div>
+      <div>Ostrich</div>
+      <div>Ostrich</div>
+      <div>Ostrich</div>
+      <div>Ostrich</div>
+      <div>Ostrich</div>
+      <div>Ostrich</div>
     </div>
   </body>
 </html>
