--- a/index.html
+++ b/index.html
@@ -7,14 +7,52 @@
     <title>CSS Challenge</title>
   </head>
   <body>
+    <div id="header">
+      <div>💚망그러진 곰 컬랙션💚</div>
+    </div>
     <div id="container">
-      <div>Ostrich</div>
-      <div>Ostrich</div>
-      <div>Ostrich</div>
-      <div>Ostrich</div>
-      <div>Ostrich</div>
-      <div>Ostrich</div>
-      <div>Ostrich</div>
+      <div>
+        <div>Life is full ups and downs</div>
+        <div>인생은 오르막과 내리막으로 가득하다.</div>
+      </div>
+      <div>
+        <img src="img/8f33d043cbb2f493977017585619a7f1.jpg">
+      </div>
+      <div>
+        <div>Live as if you were to die tomorrow</div>
+        <div>그대가 내일 죽는 것 처럼 살아라</div>
+      </div>
+      <div>
+        <img src="img/9c955fa6812239678240895e7cff071a.jpg">
+      </div>
+      <div>
+        <div>Believe in yourself.</div>
+        <div>자기 자신을 믿으세요.</div>
+      </div>
+      <div>
+        <img src="img/528a4f1570bf735b7a772d17562723f1.jpg">
+      </div>
+      <div>
+        <div>Past in just past</div>
+        <div>과거는 과거입니다.</div>
+      </div>
+      <div>
+        <img src="img/95239cea91dc66b864001a8b71b9daf0.jpg">
+      </div>
+      <div>
+        <div>Life is not all beer and skittles.</div>
+        <div>인생은 재미만 있는 것은 아니다.</div>
+      </div>
+      <div>
+        <img src="img/c1132a01e3ad8e1f0c65cb5681569b21.jpg">
+      </div>
+      <div>
+        <div>Where there is a will there is a way</div>
+        <div>뜻이 있는 곳에 길이 있다.</div>
+      </div>
+      <div>
+        <img src="img/e3216e6a0e798a039c22e9a43a5d125d.jpg">
+      </div>
     </div>
   </body>
 </html>
