--- a/index.html
+++ b/index.html
@@ -9,84 +9,26 @@
   <body>
     <div id="container">
         <div>
-            <div>CHANGES</div>
-            <div>CHANGES</div>
-            <div>CHANGES</div>
-            <div>CHANGES</div>
-            <pre>JULY   4-5</pre>
+            <pre>CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON.VEG! CURRY CAFE!    CURRY CAFE!</pre>
+        </div>
+        <div>
+            <div>LOCATIONS</div>
+            <div>●</div>
+            <div>MENU</div>
+            <div>●</div>
+            <div>SHOP</div>
+        </div>
+        <div>
+            <img src="https://i.pinimg.com/236x/a0/65/73/a06573e15f3eaedea33bbb847240c352.jpg" />
+        </div>
+        <div>
+            <img src="https://i.pinimg.com/236x/18/df/05/18df058a0b34714ec9e826ff6bedead7.jpg" />
         </div>
         <div></div>
-        <div>
-            <div>SPEAKERS</div>
-            <div>James</div>
-            <div>Mary</div>
-            <div>John</div>
-            <div>Patricia</div>
-            <div>Robert</div>
-            <div>Jennifer</div>
-            <div>Michael</div>
-            <div>Linda</div>
-            <div>William</div>
-            <div>Elizabeth</div>
-            <div>David</div>
-            <div>Barbara</div>
-            <div>Richard</div>
-            <div>Susan</div>
-            <div>Joseph</div>
-            <div>Jessica</div>
-            <div>Charles</div>
-            <div>Sarah</div>
-            <div>Thomas</div>
-            <div>Karen</div>
-            <div>Christopher</div>
-            <div>Nancy</div>
-            <div>Daniel</div>
-            <div>Lisa</div>
-            <div>Matthew</div>
-            <div>Margaret</div>
-            <div>Anthony</div>
-        </div>
-        <div>
-            <div>ARTISTS</div>
-            <div>Andrew</div>
-            <div>Jessica</div>
-            <div>Joshua</div>
-            <div>Emily</div>
-            <div>Ryan</div>
-            <div>Ashley</div>
-            <div>Jacob</div>
-            <div>Michelle</div>
-            <div>Brandon</div>
-            <div>Laura</div>
-            <div>Kevin</div>
-            <div>Kimberly</div>
-            <div>Jason</div>
-            <div>Deborah</div>
-            <div>Eric</div>
-            <div>Rachel</div>
-            <div>Stephen</div>
-            <div>Sharon</div>
-            <div>Justin</div>
-            <div>Angela</div>
-            <div>Brian</div>
-            <div>Helen</div>
-            <div>Timothy</div>
-            <div>Anna</div>
-            <div>Charles</div>
-            <div>Rebecca</div>
-            <div>Gary</div>
-        </div>
-        <div>
-            <div>ABOUT</div>
-            <div>CONTACT</div>
-            <div>VENUES</div>
-            <div>FAQ</div>
-            <div>PARTNERS</div>
-        </div>
         <div></div>
-        <div>
-            <div>TICKETS</div>
-        </div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
   </body>
 </html>
