--- a/index.html
+++ b/index.html
@@ -7,28 +7,56 @@
     <title>CSS Challenge</title>
   </head>
   <body>
-    <div id="container">
-        <div>
-            <pre>CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON.VEG! CURRY CAFE!    CURRY CAFE!</pre>
-        </div>
-        <div>
-            <div>LOCATIONS</div>
-            <div>●</div>
-            <div>MENU</div>
-            <div>●</div>
-            <div>SHOP</div>
-        </div>
-        <div>
-            <img src="https://i.pinimg.com/236x/a0/65/73/a06573e15f3eaedea33bbb847240c352.jpg" />
-        </div>
-        <div>
-            <img src="https://i.pinimg.com/236x/18/df/05/18df058a0b34714ec9e826ff6bedead7.jpg" />
-        </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+  <div id="main">
+      <div id="curry">
+          <div>জ ত ধ</div>
+          <div>CURRY</div>
+          <div>CAFE</div>
+      </div>
+      <div id="chat">
+          <div>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 240c0 114.9-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6C73.6 471.1 44.7 480 16 480c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4c0 0 0 0 0 0s0 0 0 0s0 0 0 0c0 0 0 0 0 0l.3-.3c.3-.3 .7-.7 1.3-1.4c1.1-1.2 2.8-3.1 4.9-5.7c4.1-5 9.6-12.4 15.2-21.6c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208z"/></svg>
+          </div>
+      </div>
+      <div id="container">
+          <div>
+              <pre>CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON.VEG! CURRY CAFE!    CURRY CAFE!</pre>
+          </div>
+          <div>
+              <div>LOCATIONS</div>
+              <div>●</div>
+              <div>MENU</div>
+              <div>●</div>
+              <div>SHOP</div>
+          </div>
+          <div>
+              <img src="https://i.pinimg.com/236x/a0/65/73/a06573e15f3eaedea33bbb847240c352.jpg" />
+          </div>
+          <div>
+              <img src="https://i.pinimg.com/236x/18/df/05/18df058a0b34714ec9e826ff6bedead7.jpg" />
+          </div>
+          <div>
+              <div>🞻</div>
+              <div>ORDERT-A</div>
+              <div>🞻</div>
+          </div>
+          <div>
+              <div>SPICY NEWSLETTER</div>
+          </div>
+          <div>
+              <div>🟄</div>
+              <div>RESERVATIONS</div>
+              <div>🟄</div>
+          </div>
+          <div>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
+          </div>
+          <div>
+              <pre>BEST QUALITY!    STAY SPICY -- NUMBER ONE BEST QUALITY! EVERY DAY OPEN! FLEMINGTON & NORTHCOTE! HOME DELIVERY ~ N</pre>
+          </div>
+      </div>
+
+  </div>
   </body>
 </html>
