Feat: [11/22] 11-12일차 왼쪽 페이지 구현

--- a/index.html
+++ b/index.html
@@ -7,145 +7,68 @@
     <title>CSS Challenge</title>
   </head>
   <body>
-    <div id="header">
-        <div>
-            <div>Year: All</div>
-            <div>▼</div>
-        </div>
-        <div>
-            <div>Programme: All</div>
-            <div>▼</div>
-        </div>
-        <div>
-            <div>Themes: All</div>
-            <div>▼</div>
-        </div>
-        <div>
-            <div>Practice: All</div>
-            <div>▼</div>
-        </div>
-        <div>
-            <div>Students</div>
-            <div>▼</div>
-        </div>
-    </div>
     <div id="container">
-        <div>
+        <div id="left">
+            <div>E-Commerce</div>
+            <div>UNIF</div>
+            <div>Design & Development</div>
             <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
+                <div>
+                    <div>2014 → Present</div>
+                </div>
             </div>
+            <div>Event</div>
+            <div>Veuve Clicquot</div>
+            <div>Website, Initiative Identities</div>
             <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
+                <div>
+                    <div>2015 → Present</div>
+                </div>
             </div>
+            <div>Artist</div>
+            <div>HAIM</div>
+            <div>Visual Identity, Digital Strategy, <br/>Design & Development</div>
             <div>
-                <div>2016</div>
-                <div>Read more</div>
+                <div>
+                    <div>2014 → Forever</div>
+                </div>
             </div>
-        </div>
-        <div>
+            <div>Institutional</div>
+            <div>MOCA</div>
+            <div>Streaming Platform</div>
             <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
+                <div>
+                    <div>2016</div>
+                </div>
             </div>
+            <div>Studio Project</div>
+            <div>Public Access</div>
+            <div>Website Streaming Platform, <br/> Programming</div>
             <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
+                <div>
+                    <div>2015 → Forever</div>
+                </div>
             </div>
+            <div>Musician</div>
+            <div>Kelela</div>
+            <div>Interactvie Microsite</div>
             <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
+                <div>
+                    <div>2015</div>
+                </div>
             </div>
         </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
+        <div id="middle">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>Kate Bedford</div>
-                <div>PGDIPA</div>
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/76/8b/c3/768bc3a37fa6dadba4cd7656b4e3f5c6.jpg" />
-            </div>
-            <div>
-                <div>2016</div>
-                <div>Read more</div>
-            </div>
+        <div id="right">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
   </body>
