11/23 css 11-12일차 과제 완료

--- a/index.html
+++ b/index.html
@@ -59,16 +59,66 @@
             </div>
         </div>
         <div id="middle">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>Special - Offer, Inc.</div>
+            <div>😎</div>
+            <div>㉿2014 → Forever</div>
         </div>
         <div id="right">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <div>○ Information</div>
+                <div>○ Team</div>
+                <div>● Press</div>
+            </div>
+            <div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+                <div>
+                    <div>Art News</div>
+                    <div>How to be a Successful Black Woman</div>
+                </div>
+            </div>
         </div>
     </div>
   </body>
