--- a/index.html
+++ b/index.html
@@ -8,118 +8,63 @@
   </head>
   <body>
     <div id="container">
-        <div id="left">
-            <div>E-Commerce</div>
-            <div>UNIF</div>
-            <div>Design & Development</div>
+        <div>
             <div>
-                <div>
-                    <div>2014 → Present</div>
-                </div>
+                <div>A1 OFFICE</div>
+                <div>Complete office design, construction and management.</div>
+                <div>HOME</div>
+                <div>SERVICES</div>
+                <div>SPACES</div>
+                <div>TEAM</div>
+                <div>ADVICE</div>
+                <div>CONTACT</div>
             </div>
-            <div>Event</div>
-            <div>Veuve Clicquot</div>
-            <div>Website, Initiative Identities</div>
             <div>
                 <div>
-                    <div>2015 → Present</div>
+                    <div>1300 726 566</div>
+                    <div>sales@a1office.com.au</div>
                 </div>
-            </div>
-            <div>Artist</div>
-            <div>HAIM</div>
-            <div>Visual Identity, Digital Strategy, <br/>Design & Development</div>
-            <div>
                 <div>
-                    <div>2014 → Forever</div>
+                    <div>Melbourne</div>
+                    <div>1374 North Road</div>
+                    <div>Huntingdale VIC 3166</div>
                 </div>
-            </div>
-            <div>Institutional</div>
-            <div>MOCA</div>
-            <div>Streaming Platform</div>
-            <div>
                 <div>
-                    <div>2016</div>
+                    <div>Sydney</div>
+                    <div>Level 32 101 Miller Street</div>
+                    <div>North Sydeny NSW 2060</div>
                 </div>
-            </div>
-            <div>Studio Project</div>
-            <div>Public Access</div>
-            <div>Website Streaming Platform, <br/> Programming</div>
-            <div>
-                <div>
-                    <div>2015 → Forever</div>
-                </div>
-            </div>
-            <div>Musician</div>
-            <div>Kelela</div>
-            <div>Interactvie Microsite</div>
-            <div>
-                <div>
-                    <div>2015</div>
-                </div>
+                <div>EN | 中</div>
             </div>
         </div>
-        <div id="middle">
-            <div>Special - Offer, Inc.</div>
-            <div>😎</div>
-            <div>㉿2014 → Forever</div>
+        <div>
+            <div>HOME</div>
+            <div>Think</div>
+            <div>Inside the</div>
+            <div>Square.</div>
+            <div>At A1 Office, we designm construct, project manage, and maintain office spaces across a diverse range of industries.</div>
+            <div>We bring 25 years' experience in the industry to help you with every aspect of the office fit out-from design through to construction, and everything beyond.</div>
         </div>
-        <div id="right">
+        <div>
+            <img src="https://i.pinimg.com/control2/736x/b1/f3/54/b1f354e1834640f2705083020f244a5a.jpg">
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div>
+            <div>SERVICES</div>
             <div>
-                <div>○ Information</div>
-                <div>○ Team</div>
-                <div>● Press</div>
-            </div>
-            <div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
-                <div>
-                    <div>Art News</div>
-                    <div>How to be a Successful Black Woman</div>
-                </div>
+                <div>Everything</div>
+                <div>under one roof.</div>
             </div>
         </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
   </body>
 </html>
